--- a/styles.css
+++ b/styles.css
@@ -52,11 +52,107 @@ html, body {
   height: 100%;
 }
 
+.container,
+.main-header,
+.book-form {
+	display: grid;
+}
+
+.hidden {
+	display: none;
+}
+
 .container {
-  display: grid;
   grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
   grid-template-rows: 15%;
   height: 100%;
   overflow: auto;
   gap: 20px;
+}
+
+.header {
+	display: block;
+	overflow: auto;
+}
+
+.header-background {
+	min-height: 100%;
+	background-color: rgb(90, 150, 250);
+	box-sizing: border-box;
+	padding: 20px;
+}
+
+.main-header {
+	grid-template: 1fr 6fr 1fr / 1fr 35fr 1fr;
+	min-height: 100%;
+	margin-bottom: 20px;
+}
+
+.main-header > div {
+	background-color: lavender;
+}
+
+#top-left,
+#top-right,
+#bot-left,
+#bot-right {
+	opacity: 0;
+}
+
+#top-mid,
+#left,
+#mid,
+#right,
+#bot-mid {
+  box-shadow: 4px 3px rgb(30, 30, 30);
+}
+
+.book-form {
+	gap: 20px;
+	grid-template: 1fr 1fr 1fr 1fr;
+}
+
+.title-row {
+	display: flex;
+	justify-content: space-around;
+}
+
+.subtitle {
+	text-align: center;
+	font-size: 2rem;
+}
+
+.title {
+	font-size: 4rem;
+}
+
+button {
+	border-radius: 30px;
+	max-height: 60px;
+}
+
+label,
+.form-title {
+	text-align: center;
+	font-weight: bold;
+}
+
+.form-title {
+	font-size: 3rem;
+}
+
+.form-input {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+input[type=text] {
+	width: 20%;
+}
+
+input[type=submit] {
+	width: 5%;
+	align-self: center;
+	justify-self: center;
 }
